# STM32F4DISCOVERY_template

./: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  Dockerfile  STM32F407Discovery.launch
.devcontainer/: Dockerfile  devcontainer.json
App/: CMakeLists.txt  main.c
App/Runtime/: os_runtime.h  os_task1.c  os_task2.c  os_task3.c  os_task4.c
Application/: CMakeLists.txt
Application/Runtime/: os_task1.cpp  os_task1.hpp  os_task2.cpp  os_task2.hpp  os_task3.cpp  os_task3.hpp  os_task4.cpp  os_task4.hpp
CMake/: application.cmake  platform.cmake
CubeMX/: .mxproject  Makefile  STM32F407Discovery.ioc
CubeMX/Core/Inc/: stm32f4xx_hal_conf.h
CubeMX/Core/Src/: stm32f4xx_hal_msp.c
Platform/: .mxproject  Makefile  STM32F407Discovery.ioc
Platform/Core/Inc/: FreeRTOSConfig.h
Platform/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
Tests/: CMakeLists.txt  t_first.cpp
